--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="hero-body">
         <h3 class="title is-3 has-text-centered">Application to Modeling Video as a Stochastic Process</h3>
         <br>
-          <img src="./static/images/model.jpg" autoplay muted loop playsinline height="100%">
+          <img src="./static/images/model.JPG" autoplay muted loop playsinline height="100%">
           <h2 class="subtitle has-text-centered">
             Figure 4: Schematic of the latent SDE video model. Video frames {o_i} are encoded to vectors {h_i}. The static content vector w, that is free of the dynamic information, is inferred from {h_i}. The context model processes the information with temporal convolution layers, so that its outputs {g_i} contain information from neighbouring frames. A linear interpolation on {g_i} allows the posterior SDE model to receive time--appropriate information g(t), at (intermediate) time-steps chosen by the SDE solver. Finally, the states {x_i} and static w are decoded to reconstruct frames {o'_i}.
           </h2>
@@ -197,7 +197,7 @@
 	      <div id="results-carousel" class="carousel results-carousel">
 	       <div class="item">
 		<!-- Your image here -->
-		<img src="static/images/bridge.jpg" alt="MY ALT TEXT"/>
+		<img src="static/images/bridge.JPG" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
 		   Figure 2: Recovering the Fractional Ornstein–Uhlenbeck Bridge: The true variance (blue) of a fOU bridge matches the empirical variance (dashed orange) of our trained models. The transparent black lines are the sampled approximate posterior paths used to calculate the empirical variance.
 		</h2>
@@ -218,7 +218,7 @@
 	      </div>
 	      <div class="item">
 		<!-- Your image here -->
-		<img src="static/images/pred.jpg" alt="MY ALT TEXT"/>
+		<img src="static/images/pred.JPG" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
 		  Figure 20: Stochastic predictions using the trained prior of a model driven by BM and a model driven by MA-fBM, where the initial state is conditioned on the same data. Four samples are shown for each model. The MA-fBM samples show more diverse movements, thus better capturing the dynamics in the data. The BM samples are more similar, indicating a less powerful prior was learned.
 		</h2>
