--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
             <!-- <h4 class="title conference-title is-4">ICLR 2024</h4> -->
             <h2 class="title is-2 publication-title">
               Variational Inference for SDEs<br>
-  Driven by Fractional Noise
-            </h2>
+  Driven by Fractional Noise<br></h2>
+  <h3 class="title is-4 publication-title">
+  <b>ICLR'24 (Spotlight)</b>
+            </h3>
             <div class="is-size-5 publication-authors">
 			<span class="author-block">
                 <a href="https://rdaems.github.io/">Rembert Daems</a><sup>1,2</sup>,
